test/Fail/WithoutK2.err
WithoutK2.agda:13.8-14: error: [SplitError.UnificationStuck]
I'm not sure if there should be a case for the constructor refl,
because I get stuck when trying to solve the following unification
problems (inferred index ≟ expected index):
  x ≟ x₁
  x ≟ x₁
Possible reason why unification failed:
  Cannot eliminate reflexive equation x = x of type A because K has
  been disabled.
when checking that the pattern refl x has type x ≡ x
